--- a/http-server/project.html
+++ b/http-server/project.html
@@ -8,6 +8,8 @@
 <body>
    <h1>Projects</h1>
    <h3>Project List</h3>
-   <a href="./registration">Registration</a>
+   <li>
+   <a href="/registration">Registration</a>
+   </li>
 </body>
 </html>
