--- a/http-server/project.html
+++ b/http-server/project.html
@@ -9,7 +9,8 @@
    <h1>Projects</h1>
    <h3>Project List</h3>
    <li>
-   <a href="/registration">Registration</a>
+      <a href="/">&lt;- Back to home</a>
+      <a href="/registration">Registration</a>
    </li>
 </body>
 </html>
