--- a/http-server/registration.html
+++ b/http-server/registration.html
@@ -187,5 +187,7 @@ required>
       localStorage.setItem('registrationData', JSON.stringify(data));
       form.reset();
     });
+       <script src="index.js">
+     </script>
   </script>
   
